--- a/css-course/final-project/index.html
+++ b/css-course/final-project/index.html
@@ -1,10 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial scale=1">
 
-</body>
+        <title>Little Lemon</title>
+        <meta name="description" content="The best restaurant in Chicago">
+        <meta name="author" content="Little Lemon Restaurant">
+
+        <link rel="stylesheet" href="styles.css">
+    </head>
+
+    <body>
+        <header>
+            <img src="logo.png" class="logo" alt="Italian restaurant in Chicago">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a> </li>
+                    <li><a href="menu.html">Menu</a> </li>
+                    <li><a href="book.html">Book</a> </li>
+                    <li><a href="about.html">About</a> </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <article>
+                    <h1>Weekend Delight: 50% Off Selected Wines</h1>
+                    <p> Unwind and indulge in a delightful weekend treat at Little Lemon!
+                        Enjoy a splendid offer of 50% off on our selected range of exquisite wines, exclusively on
+                        Saturdays and Sundays.
+                        Savor the finest selection of wines from around the world while relishing the cozy ambiance of
+                        our restaurant.
+                        Whether you're a wine connoisseur or looking to explore new flavors, this weekend special is
+                        tailored just for you.
+                        Don't miss this opportunity to elevate your dining experience with our handpicked wines at half
+                        the price.
+                        Join us and raise a toast to memorable moments and incredible flavors at Little Lemon in the
+                        heart of Chicago!
+                        Hurry, the offer is valid for a limited time only. Reserve your table and treat yourself
+                        to a weekend of extraordinary tastes and savings.
+                        Cheers to great moments and fantastic wines at Little Lemon!</p>
+                </article>
+                <article>
+                    <h2>Season menu</h2>
+                    <p> Experience the freshest flavors of the season!
+                        Indulge in our new seasonal menu, crafted with locally sourced ingredients for a culinary
+                        journey you won't forget.
+                    </p>
+                </article>
+                <article>
+                    <h2>Branch time</h2>
+                    <p> Join us for a delightful Sunday brunch from 10 am to 3 pm.
+                        Indulge in a delectable spread of brunch favorites and refreshing beverages for the perfect
+                        start to your day.
+                    </p>
+                </article>
+                <article>
+                    <h2>Great chef</h2>
+                    <p> Exciting news!
+                        Our chef at Little Lemon is on the brink of receiving a prestigious Michelin star.
+                        With culinary expertise and innovation, expect an extraordinary dining experience that's soon
+                        to be recognized among the finest in the industry.
+                    </p>
+                </article>
+            </section>
+        </main>
+        <footer>
+            <div>
+                <img src="logo-footer.png" class="logo-footer" alt="The best restaurant in Chicago">
+            </div>
+            <div>
+                <p>Copyright Little Lemon</p>
+            </div>
+        </footer>
+    </body>
 </html>
