--- a/css-course/effects/index.html
+++ b/css-course/effects/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-$END$
+<div class="container">
+  <div class="letters">
+    <p>D</p>
+    <p>o</p>
+    <p>n</p>
+    <p>t</p>
+  </div>
+  <div class="letters">
+    <p>W</p>
+    <p>o</p>
+    <p>r</p>
+    <p>r</p>
+    <p>y</p>
+  </div>
+  <div class="letters">
+    <p>B</p>
+    <p>e</p>
+  </div>
+  <div class="letters">
+    <p>H</p>
+    <p>a</p>
+    <p>p</p>
+    <p>p</p>
+    <p>y</p>
+  </div>
+</div>
 </body>
+
 </html>
