--- a/html-course/forms/signup.html
+++ b/html-course/forms/signup.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
 </head>
 <body>
-$END$
+  <header>
+    <img src="logo.png" width="350" height="250" class="img-fluid"> <!--logo-->
+  </header>
+  <nav>
+  </nav>
+  <main> <!--content-->
+    <h1>Sign up</h1>
+    <form>
+      <div>
+        <label for="user_first_name">First Name</label><br>
+        <input type="text" id="user_first_name" name="user_first_name">
+      </div>
+      <div>
+        <label for="user_last_name">Last Name</label><br>
+        <input type="text" id="user_last_name" name="user_last_name">
+      </div>
+      <div>
+        <label for="user_email">Email address</label><br>
+        <input type="email" id="user_email" name="user_email">
+      </div>
+      <div>
+        <label for="user_password">Password</label><br>
+        <input type="password" id="user_password" name="user_password">
+      </div>
+      <div>
+        <label for="user_confirm_password">Confirm Password</label><br>
+        <input type="password" id="user_confirm_password" name="user_confirm_password">
+      </div>
+      <div>
+        <button type="submit">Sign up</button>
+      </div>
+    </form>
+  </main>
+  <footer> <!--content right-->
+    <p>Copyright Little Lemon</p>
+  </footer>
 </body>
 </html>
