--- a/html-course/forms/task2.html
+++ b/html-course/forms/task2.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Little Lemon</title>
+
+  <meta property="og:title" content="Our Menu">
+  <meta property="og:type"  content="website">
+  <meta property="og:image" content="logo.png">
+  <meta property="og:url"   content="https://littlelemon/">
+  <meta property="og:description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:site_name" content="Little Lemon">
+
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-$END$
+<header>
+  <img src="logo.png">
+</header>
+<main>
+  <form>
+    <div>
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" required>
+      <br>
+    </div>
+    <div>
+      <br>
+      <label for="date">Date of Booking</label>
+      <input type="date" id="date" name="date" required value="2023-11-07">
+    </div>
+    <div>
+      <br>
+      <label for="number_of_people">Number Of People</label>
+      <input type="number" id="number_of_people" name="number_of_people" required min="1" max="8" value="1">
+    </div>
+    <div>
+      <br>
+      <label for="agreement">
+        <input type="checkbox" id="agreement" name="agreement" required>
+        I agree to the cancellation policy
+      </label>
+    </div>
+    <div>
+      <br>
+      <button type="submit">Book Now</button>
+    </div>
+  </form>
+</main>
 </body>
+
 </html>
