--- a/html-course/media/task1.html
+++ b/html-course/media/task1.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>My Video Rating</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-$END$
+    <main>
+        <br>
+        <video width="320" height="240" controls>
+            <source src="video.mp4" type="video/mp4">
+        </video>
+        <form>
+            <div>
+                <br>
+                <Label for="rating">Rating</Label>
+                <input type="range" id="rating" name="rating" min="1" max="5" value="3" list="ratings">
+                <datalist id="ratings">
+                    <option value="1" label="1"></option>
+                    <option value="2"></option>
+                    <option value="3"></option>
+                    <option value="4"></option>
+                    <option value="5" label="5"></option>
+                </datalist>
+            </div>
+            <br>
+            <div>
+                <button type="submit">Submit Rating</button>
+            </div>
+        </form>
+    </main>
 </body>
+
 </html>
